--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
-<link href="main.css" rel="stylesheet">
-
-<h1>Hello World</h1>
-<p>Who written this line</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+    
+    <title>Document</title>
+</head>
+<body>
+    <div class="container-fluid">
+		<div class="row">
+            <div class="col-12">
+                <h1>TOP DIGITAL MARKETTNG COMPANY IN MUMBAI</h1>
+            </div>
+        </div>
+    </div>
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+</body>
+</htm>
